log
Thu 23 Mar 2023 02:01:55 AM UTC: 
 tests:  0|6
total_score: 0/70
36e1734
Thu 23 Mar 2023 07:44:59 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|6
total_score: 0/70
74ec57c
Thu 23 Mar 2023 07:45:57 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
71cf0df
Thu 23 Mar 2023 07:46:10 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
00eb6c8
Thu 23 Mar 2023 07:46:18 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
4b7db58
Thu 23 Mar 2023 07:46:28 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:6: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
   33 |   if(list==NULL) return(NULL);
      |      ^~~~
      |      List
list.c:33:6: note: each undeclared identifier is reported only once for each function it appears in
list.c:38:1: error: control reaches end of non-void function [-Werror=return-type]
   38 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a78981c
Thu 23 Mar 2023 07:46:42 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
1e92f43
Thu 23 Mar 2023 07:52:15 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c963282
Thu 23 Mar 2023 07:52:48 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
a864e60
Thu 23 Mar 2023 07:53:17 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
69e95ff
Thu 23 Mar 2023 07:54:01 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
251e1f1
Thu 23 Mar 2023 07:54:36 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7b95bc4
Thu 23 Mar 2023 07:54:49 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7ff9802
Thu 23 Mar 2023 07:57:15 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:16: error: invalid operands to binary - (have ‘Node *’ and ‘void *’)
   40 |   list->current-=list->head->data;
      |                ^~~~~~~~~~~~~~~~~~
      |                            |
      |                            void *
Compilation failed
ef91c2a
Thu 23 Mar 2023 07:57:20 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
233e9b9
Thu 23 Mar 2023 07:57:35 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:28: error: expected expression before ‘;’ token
   40 |   list->current=list->head-;
      |                            ^
Compilation failed
5104f47
Thu 23 Mar 2023 07:57:49 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6f46d4c
Thu 23 Mar 2023 08:03:38 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:38: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   40 |   if(list==NULL || list->head==NULL) return;
      |                                      ^~~~~~
list.c:39:8: note: declared here
   39 | void * firstList(List * list) {
      |        ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
694ba02
Thu 23 Mar 2023 08:03:58 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
226c0a8
Thu 23 Mar 2023 08:04:10 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
bb77e3a
Thu 23 Mar 2023 08:04:20 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
36a2e40
Thu 23 Mar 2023 08:09:23 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
90e38e0
Thu 23 Mar 2023 08:10:55 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
804eece
Thu 23 Mar 2023 08:11:37 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
1439bae
Thu 23 Mar 2023 08:11:50 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3b33a71
Thu 23 Mar 2023 08:12:28 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
3c72211
Thu 23 Mar 2023 08:14:21 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
4de8bd7
Thu 23 Mar 2023 08:16:54 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
818c32f
Thu 23 Mar 2023 08:18:44 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
16305a4
Thu 23 Mar 2023 08:19:16 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
4c956ec
Thu 23 Mar 2023 08:20:03 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
55c1a2e
Thu 23 Mar 2023 08:24:29 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
964c33c
Thu 23 Mar 2023 08:25:11 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
5e269ed
Thu 23 Mar 2023 08:25:27 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
bf9da10
Thu 23 Mar 2023 08:26:19 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
5b7fa7e
Thu 23 Mar 2023 08:32:30 PM UTC: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  9|3
total_score: 35/70
0778e91
Thu 23 Mar 2023 08:32:45 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
c5f7662
